k8s/services/filebrowser/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app: filebrowser
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:s6
          volumeMounts:
            - name: data
              mountPath: /srv
            - name: db
              mountPath: /database
            - name: db
              mountPath: /config
            - name: cloud
              mountPath: /srv/cloud
            - name: sync
              mountPath: /srv/sync
            - name: media
              mountPath: /srv/media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: cloud
          persistentVolumeClaim:
            claimName: cloud-pvc
        - name: db
          persistentVolumeClaim:
            claimName: db-pvc
        - name: sync
          persistentVolumeClaim:
            claimName: sync-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: filebrowser
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: filebrowser
---
# apiVersion: v1
# kind: Service
# metadata:
#
#   name: filebrowser-lb
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 9050
#       targetPort: 80
#   selector:
#     app: filebrowser
# ----- WebDav Setup -----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav
  labels:
    app: webdav
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdav
  template:
    metadata:
      labels:
        app: webdav
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: webdav
          image: hacdias/webdav:latest
          args: ["-c", "/config/config.yml"]
          ports:
            - containerPort: 6060
          volumeMounts:
            - name: data
              mountPath: /data
            - name: cloud
              mountPath: /data/cloud
            - name: webdav
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: cloud
          persistentVolumeClaim:
            claimName: cloud-pvc
        - name: webdav
          configMap:
            name: webdav
            items:
              - key: config
                path: config.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webdav
spec:
  ports:
    - port: 80
      targetPort: 6060
  selector:
    app: webdav
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`filebrowser.rvserver.online`)
      kind: Rule
      services:
        - name: filebrowser
          port: 80
    - match: Host(`webdav.rvserver.online`)
      kind: Rule
      services:
        - name: webdav
          port: 80
